--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,18 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.3.10.Final</version>
         </dependency>
+
+        <!-- java 11버전부터 xml을 Java Object형식으로 바꿔주는 기술이 default가 아니므로, 넣어줘야함 (jpa Setting을 xml로 함) -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
 </project>
